# BasicMotions-classification-with-ShapeFormer

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
docs/: execution_commands.md
model_training/src/: README.md  main.py
model_training/src/Results/Dataset/UEA/2025-11-16_12-02/: configuration.json
src/: Training.py  app.py  infer_shapeformer.py  main.py  utils.py
src/Dataset/: classifier_tools.py  data_loader.py  load_UEA_data.py  load_segment_data.py
src/Models/: AbsolutePositionalEncoding.py  Attention.py  analysis.py  loss.py  optimizers.py  position_shapelet.py  shapeformer.py  utils.py
src/Shapelet/: auto_pisd.py  mul_shapelet_discovery.py  pst_support_method.py  shapelet_discovery.py  shapelet_support_method.py
src/scripts/: data_generation.ipynb
streamlit_app/src/: app.py
streamlit_app/src/config/: BasicMotions_80.pkl  configuration.json
